// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Appearances 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Appearances Disabled 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--disabled"
    disabled={true}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark psds-button--disabled"
    disabled={true}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark psds-button--disabled"
    disabled={true}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark psds-button--disabled"
    disabled={true}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Appearances With Icon 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button As Link 1`] = `
<a
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
  href="https://duckduckgo.com"
  onClick={[Function]}
>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</a>
`;

exports[`Storyshots Components/Button As Link With Icon 1`] = `
<a
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
  href="https://duckduckgo.com"
  onClick={[Function]}
>
  <div
    className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
  >
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</a>
`;

exports[`Storyshots Components/Button Basic 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
  disabled={false}
  onClick={[Function]}
>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</button>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--disabled"
  disabled={true}
  onClick={[Function]}
>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</button>
`;

exports[`Storyshots Components/Button Disabled With Icon 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--disabled psds-button--not-icon-only"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
  >
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</button>
`;

exports[`Storyshots Components/Button Example Autofocus 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
  disabled={false}
>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    Should be focused
  </span>
</button>
`;

exports[`Storyshots Components/Button Icon Alignments 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      left
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only psds-button--icon-align-right"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-right psds-button__icon--size-medium"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      right
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Icon Only 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--icon-only"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium psds-button__icon--icon-only"
  >
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
  <span
    aria-hidden={false}
    className="psds-button__text"
  />
</button>
`;

exports[`Storyshots Components/Button Layouts 1`] = `
Array [
  <div
    style={
      Object {
        "margin": 8,
        "outline": "1px dashed pink",
        "width": "400px",
      }
    }
  >
    <button
      className="psds-button psds-button--layout-full-width psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
      disabled={false}
    >
      <span
        aria-hidden={false}
        className="psds-button__text"
      >
        fullWidth
      </span>
    </button>
  </div>,
  <div
    style={
      Object {
        "margin": 8,
        "outline": "1px dashed pink",
        "width": "400px",
      }
    }
  >
    <button
      className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
      disabled={false}
    >
      <span
        aria-hidden={false}
        className="psds-button__text"
      >
        inline
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Loading Transition 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
  disabled={false}
>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    Wait for it
  </span>
</button>
`;

exports[`Storyshots Components/Button Loading Transition Start True 1`] = `
<button
  aria-label="Loading..."
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
  disabled={true}
>
  <div
    className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium psds-button__icon--icon-only psds-button__icon--loading-label-only"
  >
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
    >
      <span
        className="psds-button__loading psds-button__loading--size-medium psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    aria-hidden={true}
    className="psds-button__text psds-button__text--invisible"
  >
    Wait for it
  </span>
</button>
`;

exports[`Storyshots Components/Button Loading With Icon 1`] = `
<button
  aria-label="loading"
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
  >
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
    >
      <span
        className="psds-button__loading psds-button__loading--size-medium psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</button>
`;

exports[`Storyshots Components/Button Loading With Label No Icon 1`] = `
<button
  aria-label="loading"
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium psds-button__icon--icon-only psds-button__icon--loading-label-only"
  >
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
    >
      <span
        className="psds-button__loading psds-button__loading--size-medium psds-button__loading--appearance-primary psds-button__loading--theme-dark"
      />
    </div>
  </div>
  <span
    aria-hidden={true}
    className="psds-button__text psds-button__text--invisible"
  >
    click me
  </span>
</button>
`;

exports[`Storyshots Components/Button Sizes 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      xSmall
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      small
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      medium
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      large
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Sizes With Icon 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall"
    >
      <div
        className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      xSmall
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small"
    >
      <div
        className="psds-icon psds-icon--size-small psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      small
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      medium
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
    disabled={false}
  >
    <div
      className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-large"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      large
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Style Override 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "red",
    }
  }
>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</button>
`;

exports[`Storyshots Components/Button Theme Nesting 1`] = `
Array [
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      dark
    </span>
  </button>,
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--light"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      light
    </span>
  </button>,
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      dark
    </span>
  </button>,
]
`;

exports[`Storyshots Components/Button Variations 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr 1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button Vert Alignment 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr 1fr 1fr",
    }
  }
>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-primary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      primary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-secondary psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      secondary
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-stroke psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      stroke
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-large psds-button--appearance-flat psds-theme--dark"
    disabled={false}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      flat
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Button With Icon 1`] = `
<button
  className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark psds-button--not-icon-only"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-medium"
  >
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
  <span
    aria-hidden={false}
    className="psds-button__text"
  >
    click me
  </span>
</button>
`;
